Reverted param changes to GenericFiles controller due to performance degradation
